# Yolobottles

./: .gitignore  CLAUDE.md
.claude/config/: llm-wiki.json
.claude/skills/Skill-creator/: SKILL.md
.claude/skills/llm-wiki/: SKILL.md
.claude/skills/llm-wiki/config/: llm-wiki.example.json
.claude/skills/llm-wiki/references/: wiki-config.md  wiki-graph.md  wiki-ingest.md  wiki-input.md  wiki-lint.md  wiki-query.md
.claude/skills/llm-wiki/scripts/: build_graph.py
.claude/skills/llm-wiki/templates/: wiki-graph-template.html  wiki-page-templates.md
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/nvidia-cuda/: .gitignore  LICENSE
.claude/skills/nvidia-cuda/.github/: release-v0.1.0.md  release-v0.2.0.md  (+2 more)
.claude/skills/pdf/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/scalance-skill/: SKILL.md
.claude/skills/troubleshooting-sidel-blower/: SKILL.md
.claude/skills/xlsx/: SKILL.md
datasets/: dataset.yaml
docs/: index.md  log.md  schema.md  workspace-guide.md
docs/architecture/: overview.md
docs/defects/: catalog.md  color_defect.md  contamination.md  hole.md  mold_defect.md  whitening.md
docs/tools/: annotator.md  hmi.md  importer.md
docs/training/: dataset-guide.md
inspector/: Cargo.toml
inspector/src/: ejector.rs  inference.rs  main.rs  pipeline.rs
inspector/src/hmi/: mod.rs
inspector/src/hmi/static/: index.html
tools/importer/: annotate.py  app.py  requirements.txt
training/: export_onnx.py  prepare_dataset.py  requirements.txt  train.py
wiki/: index.md  log.md  overview.md
wiki/concepts/: ort-rc12-api.md
(+5 files in other folders)
