[package]
name = "inspector"
version = "0.1.0"
edition = "2021"
description = "Yolobottles — real-time PET bottle inspection via ONNX/YOLO"

[[bin]]
name = "inspector"
path = "src/main.rs"

[dependencies]
# ONNX Runtime — auto-downloads prebuilt binaries on first cargo build
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Error handling
anyhow = "1"

# Image loading and preprocessing
image = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web HMI
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }

# Serialization (JSON API for HMI)
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared state between pipeline and HMI
parking_lot = "0.12"

# Glob for image bank scanning
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
